--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 .navbar {
   width: 80%;
-  max-height: 1560px;
+  height: 100px;
   position: absolute;
   top: 5%;
   left: 0;
@@ -49,7 +49,11 @@ body {
 }
 .cover {
   width: 100%;
-  height: 1560px;
+  height: 100vh;
+  display: flex;
+  flex: 0.5;
+  align-items: center;
+  justify-content: center;
   background-image: url(./assets/cover.jpg);
   background-position: center;
   background-size: cover;
@@ -59,15 +63,11 @@ body {
 .about,
 .reachMe,
 .proj {
-  display: block;
-  position: relative;
-  top: 12%;
   margin: 0 auto;
-  width: 35%;
+  width: 50%;
   height: 20%;
 }
 .intro {
-  top: 15%;
   text-align: left;
 }
 .attr {
@@ -80,21 +80,10 @@ body {
 .reachMe,
 .proj {
   text-align: center;
-  padding: 20px;
   font-size: 12px;
   display: none;
 }
-.proj {
-  width: 50%;
-  height: 50%;
-}
-.about {
-  width: 40%;
-  height: 25%;
-}
 .reachMe {
-  top: 15%;
-  width: 30%;
   height: 15%;
 }
 .name {
@@ -141,7 +130,6 @@ p {
   animation-fill-mode: backwards;
 }
 .projectContainer {
-  position: absolute;
   margin: 25px auto 0;
   height: 100px;
   width: 100%;
@@ -244,7 +232,6 @@ a {
     padding: 8px 5px;
     font-size: 15px;
   }
-
   .intro {
     top: 15%;
   }
@@ -263,7 +250,6 @@ a {
   .about,
   .reachMe,
   .proj {
-    top: 15%;
     width: 75%;
     padding: 20px;
   }
@@ -274,7 +260,11 @@ a {
     width: 150%;
   }
   .project {
+    font-size: 10px;
+    width: 120px;
+    height: 40px;
     margin: 5px;
+    padding: 10px 5px;
   }
   .contact {
     bottom: 0;
@@ -287,19 +277,10 @@ a {
   p {
     font-size: 13px;
   }
-  .about {
-    top: 15%;
-  }
-  .proj {
-    top: 13%;
-  }
-  .reachMe {
-    top: 15%;
-  }
   .project {
-    width: 120px;
+    width: 100px;
+    height: 30px;
     margin: 5px;
-    padding: 15px 5px 5px;
   }
   hr {
     width: 50%;
