--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ html {
   overflow: hidden;
 }
 body {
+    width: 100%;
+    height: 100vh;
+    background-image: url(./assets/cover.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
   text-align: center;
 }
 * {
@@ -11,8 +17,7 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 .navbar {
-  width: 80%;
-  height: 100px;
+  width: 80%; 
   position: absolute;
   top: 5%;
   left: 0;
@@ -47,24 +52,14 @@ body {
   color: #01c5c4;
   border-color: #01c5c4;
 }
-.cover {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex: 0.5;
-  align-items: center;
-  justify-content: center;
-  background-image: url(./assets/cover.jpg);
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-}
+
 .intro,
 .about,
 .reachMe,
 .proj {
-  margin: 0 auto;
-  width: 50%;
+  display: block;
+  margin: 15%  auto 0 ;
+  width: 35%;
   height: 20%;
 }
 .intro {
@@ -79,11 +74,21 @@ body {
 .about,
 .reachMe,
 .proj {
-  text-align: center;
+  padding: 20px;
   font-size: 12px;
   display: none;
 }
+.proj {
+  width: 50%;
+  height: 50%;
+}
+.about {
+  width: 40%;
+  height: 25%;
+}
 .reachMe {
+  top: 15%;
+  width: 30%;
   height: 15%;
 }
 .name {
@@ -130,7 +135,9 @@ p {
   animation-fill-mode: backwards;
 }
 .projectContainer {
-  margin: 25px auto 0;
+
+  justify-content: center;
+  margin-top: 20px;
   height: 100px;
   width: 100%;
 }
@@ -146,10 +153,10 @@ p {
 hr {
   position: absolute;
   top: 80%;
+  right: 0;
+  left: 0;
   margin: auto;
-  height: 0;
   width: 30%;
-  border: none;
   border-top: solid white 1px;
 }
 .contact {
@@ -216,10 +223,8 @@ a {
   }
 }
 
-@media screen and (max-width: 1031px) {
+@media screen and (max-width: 1050px) {
   .navlinks {
-    display: flex;
-    flex-direction: column;
     align-items: center;
     height: 200px;
   }
@@ -232,8 +237,9 @@ a {
     padding: 8px 5px;
     font-size: 15px;
   }
+
   .intro {
-    top: 15%;
+    margin: 25% auto 0 ;
   }
   .name {
     width: 150px;
@@ -250,6 +256,7 @@ a {
   .about,
   .reachMe,
   .proj {
+    margin: 30% auto 0 ;
     width: 75%;
     padding: 20px;
   }
@@ -260,11 +267,11 @@ a {
     width: 150%;
   }
   .project {
-    font-size: 10px;
+    font-size: 12px;
+    padding: 10px 0;
+    height: 40px;
     width: 140px;
-    height: 50px;
     margin: 5px;
-    padding: auto;
   }
   .contact {
     bottom: 0;
@@ -273,25 +280,34 @@ a {
     margin: 0px 25px;
   }
 }
-@media screen and (max-width: 443px) {
-  .about,
-  .reachMe,
-  .proj {
-    width: 100%;
+@media screen and (max-width: 600px) {
+  *{
+    font-size: 15px;
+  }
+  .navlinks{
+    display: flex;
+    flex-direction: column;
+  }
+  br{
+    display: block;
+    content: "";
+    margin: 20px 0px;
   }
   p {
-    font-size: 12px;
+    font-size: 13px;
+  }
+  .intro, .about,
+  .reachMe,
+  .proj {
+    margin-top: 35vh;
   }
   .project {
-    padding: 5px 5px;
-    width: 100px;
-    height: 30px;
+    width: 120px;
     margin: 5px;
+    padding: 10px 5px 5px;
   }
   hr {
-    height: 0;
     width: 50%;
-    top: 80%;
   }
   .contact {
     bottom: 0;
