--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ html {
   box-sizing: border-box;
   text-align: center;
   font-family: "Poppins", sans-serif;
-  
 }
 body {
   overflow-x: hidden;
@@ -18,8 +17,6 @@ nav {
   height: 10vh;
   width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
 }
 a {
   display: flex;
@@ -30,8 +27,7 @@ a {
   color: #393e46;
   background-color: rgba(255, 255, 255, 0.5);
   text-decoration: none;
-  outline: none;
-  transition: all 0.5s ease-in;
+  transition: background 0.5s ease-in;
 }
 nav a {
   backdrop-filter: blur(10px) saturate(130%);
@@ -39,20 +35,25 @@ nav a {
 nav a:hover {
   background: transparent;
 }
+#home,
+#about,
+#contact,
+#project {
+  height: 100vh;
+}
 #home {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   background: linear-gradient(to left, #8280ff, #4f92ce);
   color: white;
-  height: 100vh;
 }
 #home p {
   opacity: 0;
   animation: 1s fadeIn forwards ease 1s;
 }
-.switch{
+.switch {
+  cursor: pointer;
   padding: 5px;
   height: 10%;
   font-size: medium;
@@ -61,9 +62,9 @@ nav a:hover {
   background: rgba(255, 255, 255, 0.3);
   border: none;
   outline: none;
-  border-radius: 40px;
+  border-radius: 30%;
 }
-.intro{
+.intro {
   display: none;
   flex-direction: column;
 }
@@ -73,45 +74,47 @@ nav a:hover {
 .intro h1:nth-child(2) {
   animation: 1s floatInTop ease;
 }
-.another-intro{
+.another-intro {
   position: relative;
   display: flex;
   flex-direction: column;
 }
-.main{
+.main {
   display: flex;
   flex-direction: column;
   z-index: 0;
 }
-.main h1{ 
+.main h1 {
   z-index: -1;
   position: absolute;
   width: 300px;
   transform: translateY(50px);
 }
-.main h1:nth-child(1){
+.main h1:nth-child(1) {
   animation: forwards ticker 1s ease, forwards tickerGo 1s ease 2s;
 }
-.main h1:nth-child(2){
+.main h1:nth-child(2) {
   animation: forwards ticker 1s ease 2s;
 }
-.top, .bottom{
-  
+.top,
+.bottom {
   z-index: 1;
-  background-image: linear-gradient(to right, rgb(100, 139, 226), rgb(109, 135, 235));
+  background-image: linear-gradient(
+    to right,
+    rgb(100, 139, 226),
+    rgb(109, 135, 235)
+  );
 }
-.top, .bottom, .main{
+.top,
+.bottom,
+.main {
   width: 300px;
   height: 50px;
 }
 #about {
   display: flex;
-  z-index: 2;
   align-items: center;
-  justify-content: flex-start;
-  color: black;
   background: linear-gradient(to right, #fb929e, #df9755);
-  height: 100vh;
 }
 .svg {
   width: 50%;
@@ -124,17 +127,14 @@ nav a:hover {
   margin-left: 10%;
 }
 #about p {
-  margin-left: 20%;
+  margin-left: 10%;
   margin-right: 5%;
-  display: block;
-  width: 500px;
 }
 #project {
   display: flex;
   flex-direction: column;
   justify-content: center;
   background: linear-gradient(to right, #6f6ddb, #4f92ce);
-  height: 100vh;
   color: white;
 }
 .projectContainer {
@@ -143,13 +143,13 @@ nav a:hover {
   justify-content: space-evenly;
 }
 #project a {
+  background-color: #eeeeee75;
   box-shadow: none;
-  width: 15%;
-  border-radius: 10px;
+  width: 20%;
+  border-radius: 20px;
+  transition: box-shadow 1s ease, transform 1s ease;
 }
 #project a:hover {
-  color: black;
-  background-color: #eeeeee75;
   transform: translateY(-10px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
@@ -159,8 +159,6 @@ nav a:hover {
   align-items: center;
   justify-content: space-evenly;
   background: linear-gradient(to left, #fb929e, #df9755);
-  height: 100vh;
-  color: black;
 }
 #contact p {
   margin-top: 100px;
@@ -169,58 +167,40 @@ nav a:hover {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
-  width: 50%;
+}
+.links p{
+  display: none;
+  padding: 5px;
+  border-radius: 10px;
+  position: absolute;
+  background-color: #ffffff69;
 }
 .links a {
-  box-shadow: none;
-}
-.links a:nth-child(1) {
-  display: flex;
-  flex-direction: column;
-}
-.links a:nth-child(1):hover::after {
-  opacity: 1;
-}
-.links a:nth-child(1)::after {
-  position: absolute;
-  content: "quickersilver#3149";
-  font-size: smaller;
-  z-index: 10;
-  padding-top: 5%;
-  color: white;
-  transition: all 0.5s ease;
-  pointer-events: all;
-  opacity: 0;
-}
-#contact a {
   cursor: pointer;
   height: 150px;
   width: 150px;
   background: transparent;
 }
-.links img {
-  cursor: pointer;
-}
-.links img:hover {
+.links a:hover {
   filter: invert(20%);
 }
-.fade-in-class{
+.fade-in-class {
   animation: fadeIn 2s ease;
   animation-fill-mode: forwards;
 }
-@keyframes ticker{
-  from{
+@keyframes ticker {
+  from {
     transform: translateY(50px);
   }
-  to{
+  to {
     transform: translateY(0px);
   }
 }
-@keyframes tickerGo{
-  from{
+@keyframes tickerGo {
+  from {
     transform: translateY(0px);
   }
-  to{
+  to {
     transform: translateY(-50px);
   }
 }
@@ -259,59 +239,35 @@ nav a:hover {
     justify-content: space-around;
   }
   #about * {
-    margin: 0 !important;
-  }
-  .projectContainer a {
-    width: 20% !important;
+    margin: 10% 20% !important;
   }
 }
 @media screen and (max-width: 600px) {
-  nav {
-    height: 7vh;
-  }
   nav a {
     height: 7vh;
   }
-  #about,
   #project,
-  #contact {
+  #contact,
+  .projectContainer {
     flex-direction: column;
+  }
+  .svg {
+    width: 50% !important;
+  }
+  .svg:nth-child(2) {
+    width: 70% !important;
   }
   .projectContainer {
     height: 40vh;
-    flex-direction: column;
     align-items: center;
     justify-content: space-around;
   }
   .projectContainer a {
     width: 150px !important;
   }
-  .svg:nth-child(1) {
-    margin-left: 0px;
-    width: 80%;
-  }
-  .svg:nth-child(2) {
-    width: 80%;
-  }
-  #about {
-    justify-content: space-evenly;
-  }
-  #about p {
-    margin: 0px;
-    width: auto;
-  }
-  .links {
-    width: 70%;
-  }
   #contact a {
     height: 100px;
     width: 100px;
-  }
-  .links a:nth-child(1)::after {
-    padding-top: 15%;
-  }
-  #contact {
-    height: 100vh;
   }
   #contact p {
     margin-top: 0;
